--- a/tmux.conf
+++ b/tmux.conf
@@ -1,12 +1,20 @@
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin "arcticicestudio/nord-tmux"
+#set -g @plugin "arcticicestudio/nord-tmux"
+set -g @plugin 'egel/tmux-gruvbox'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
+# Set the tmux prefix
+set-option -g prefix C-b
+
+# Enable mouse scrolling without Prefix-[
+set-option -g mouse on
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
+
