--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,10 @@ set-option -g prefix C-b
 # Enable mouse scrolling without Prefix-[
 set-option -g mouse on
 
+# Install tmux plugins when tmux starts
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
 
