--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,8 @@
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-#set -g @plugin "arcticicestudio/nord-tmux"
-set -g @plugin 'egel/tmux-gruvbox'
+set -g @plugin "arcticicestudio/nord-tmux"
+#set -g @plugin 'egel/tmux-gruvbox'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
